test/compile-errors/redundant-purity-specifier.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: [
		struct(range(0, 16), "", public, [], some(purity(10, data)), builtin)
		struct(range(16, 34), "", public, [], some(purity(29, mut)), extern-ptr)
		struct(range(34, 49), "", public, [], some(purity(43, data)), record(none, []))
		struct(range(49, 65), "", public, [], some(purity(57, data)), union([member(r, none)]))]
	funs: [])
